1. 将Spring-Boot JAR 的加解密和普通JAR的加解密分开